--- a/static/index.html
+++ b/static/index.html
@@ -22,7 +22,7 @@
     <h1 style="text-align: center;">DU Attend v2.1</h1>
     <hr>
 
-    <div role="search">
+    <div role="search" style="visibility: hidden; display: none">
         <form action="search.html" method="get" id="search_form">
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="무엇이든 찾아보세요" aria-label="검색창" name="q"
@@ -230,7 +230,7 @@
         $("#classroom_list").empty();
         classrooms.forEach(function (e, i) {
             let class_name = e.name;
-            class_name = class_name? class_name.replaceAll("<", "＜").replaceAll(">", "＞") : "이름 없는"
+            class_name = class_name ? class_name.replaceAll("<", "＜").replaceAll(">", "＞") : "이름 없는"
             if (getByteB(class_name) > 16) {
                 let l = getByteB(class_name) % 2 === 0 ? 10 : 11
                 class_name = class_name.substring(0, l) + "..."
@@ -244,7 +244,7 @@
                     <span>${class_name}</span>
                 </div>
                 <div class="ms-auto me-4">
-                    <i data-lucide="arrow-right"></i>
+                    →
                 </div>
             </div>`)
             //     $("#classroom_list").append(`<div style="margin-bottom: 1em;" >
