파이썬 버전 변경 3.8->3.9

--- a/static/fragment/footer.html
+++ b/static/fragment/footer.html
@@ -1,7 +1,7 @@
 <div class="copyleft" style="padding-left: 0.5em; padding-right: 0.5em; line-height: 1.5;">
     <hr>
     2022.
-    <a target="_blank" href="https://works.miscthings.net">
+    <a target="_blank" href="https://miscthings.net">
         <i data-lucide="users"></i> MiscThings</a>,
     <a href="/static/introduce.html"><i data-lucide="help-circle"></i> 사용법</a>,
     <a href="/static/report.html"><i data-lucide="megaphone"></i> 의견·문의</a>,
