--- a/static/fragment/banner_new.html
+++ b/static/fragment/banner_new.html
@@ -69,6 +69,14 @@
                 </ul>
             </li>
             <li>
+                사진(갤러리)앱에서 QR코드 스캔(베타 버전)
+                <ul>
+                    <li>사진에서 QR코드를 스캔할 수 있는 기능을 추가했습니다. <code>강의실 추가</code> 메뉴에서 사진(갤러리)앱에서 QR 코드 로드 버튼을 클릭하여
+                        사진을 선택하면 됩니다.</li>
+                    <li>이 기능은 베타 버전으로, 모든 사진에서 QR코드를 인식하지 못할 수 있습니다. 아이폰에서는 아직 테스트하지 않았습니다. 버그가 있으면 의견·도움요청으로 언제든 문의 주십시오.</li>
+                </ul>
+            </li>
+            <li>
                 검색 기능 비활성화
                 <ul>
                     <li>홈랩 서버 이전을 진행하게 되어 검색 기능을 비활성화 했습니다. 이전이 완료되면 돌아올 겁니다</li>
