뒤로 가기 버튼 추가, 클로드 작업내용 기록

--- a/static/qr.html
+++ b/static/qr.html
@@ -94,6 +94,9 @@
 
     <!-- 이미지 로드 버튼 추가 -->
     <div style="text-align: center; margin-bottom: 1em;">
+<!--        뒤로 가기 버튼 추가 -->
+        <button class="btn-outline-secondary btn" onclick="window.history.back();" style="width: 100%; margin-bottom: 1em;">뒤로가기</button>
+
         <input type="file" id="imageFileInput" accept="image/*" style="display: none;">
         <button id="loadImageButton" class="btn-outline-secondary btn" style="width: 100%; margin-bottom: 1em;">사진(갤러리)앱에서 QR
             코드 로드
