--- a/static/fragment/header.html
+++ b/static/fragment/header.html
@@ -19,7 +19,7 @@
 <script src="/static/sentry.min.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-W60L1V7RMC"></script>
-<script src="//unpkg.com/lucide@0.484.0"></script>
+<script src="//unpkg.com/lucide@0.485.0/dist/umd/lucide.min.js"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
 
